# classification

./: README.md  RecognitionLibrary.hi  RecognitionLibrary.hs  Task.hs  task.hi  test.hs
Recognize/: .project  Recognize.cabal
Recognize/.dist-buildwrapper/src/: Main.hs  RecognizeLibrary.hs
Recognize/src/: RecognizeLibrary.hi
ghci/: RandomValues.txt  RecognitionLibrary.hs  test_last.txt
