name:           Recognize
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple

executable Recognize
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   RecognizeLibrary,
                   Test

